# geminihackathon

./: .gitignore  AI_Risk_Assessment_Guide.xlsx  EU_AI_Act_Annex_XII_Downstream_Provider_Template.xlsx  EU_AI_Act_Article_13_Compliance_Template.xlsx  INCIDENT_MANAGEMENT_README.md  INCIDENT_MANAGEMENT_SUMMARY.md  README.md  ai_act_cli.py  alert_webhook_handler.py  bias_testing.py  bias_testing_cli.py  create_annex12_template.py  create_article13_template.py  cybersecurity_assessment.py  demo_change_management.py  demo_cybersecurity_performance.py  demo_incident.py  demo_security_monitoring.py  human_oversight.py  human_oversight_cli.py  incident_cli.py  incident_management.py  query_ai_act.py  requirements.txt  security_input.py  security_monitoring.py
Output/: CYBERSECURITY_ASSESSMENT.json  CYBERSECURITY_ASSESSMENT.md  Record_Keeping_Logging_Art12.xlsx  Record_Keeping_Logging_Art12_Report.md  governance_security_snapshot.json  (+1 more)
Risks packages/EU AI Act Compliance/data governance/: .gitignore  Dockerfile  README.md  pyproject.toml  run_mcp.bat
Risks packages/EU AI Act Compliance/data governance/examples/: demo_library.py  demo_mcp_client.py  demo_rag_evaluation.py
Risks packages/EU AI Act Compliance/data governance/examples/repos/simple_rag/: data.txt  rag.py
Risks packages/EU AI Act Compliance/data governance/src/data_governance/: bias.py  engine.py  environment.py  lineage.py  main.py  privacy.py  quality.py  reporting.py  security.py  server.py
Risks packages/EU AI Act Compliance/data governance/src/data_governance/reports/: template.html
autofill/: README.md  (+7 more)
(+155 files in other folders)
